--- a/web_gunung/index.html
+++ b/web_gunung/index.html
@@ -558,7 +558,7 @@
                   <p class="item-intro text-muted">Gn. Bromo, Podokoyo, Tosari, Pasuruan, Jawa Timur</p>
                   <img class="img-fluid d-block mx-auto" src="img/portfolio/01-full.jpg" alt="">
                   <ul class="list-inline">
-                    <li>Ketinggian: 2,329 mdpl</li>
+                    <li>Ketinggian: 2.329 mdpl</li>
                     <li>Client: Threads</li>
                     <li>Koordinat: 7°56′30″LU,112°57′0″BT</li>
                   </ul>
@@ -592,7 +592,7 @@
                   <p class="item-intro text-muted">Gn. Kawi, Ngadirenggo/Htn, Wlingi, Blitar, Jawa Timur</p>
                   <img class="img-fluid d-block mx-auto" src="img/portfolio/02-full.jpg" alt="">
                   <ul class="list-inline">
-                    <li>Ketinggian: 2,551 mdpl</li>
+                    <li>Ketinggian: 2.551 mdpl</li>
                     <li>Client: Explore</li>
                     <li>Koordinat: 7.9550° S,112.4650° E</li>
                   </ul>
@@ -625,12 +625,12 @@
                   <h2 class="text-uppercase">GUNUNG PANDERMAN</h2>
                   <p class="item-intro text-muted">Gn Panderman, Dusun Toyomerto, Desa Pesanggrahan, Kecamatan Batu, Kota Batu, Jawa Timur</p>
                   <img class="img-fluid d-block mx-auto" src="img/portfolio/03-full.jpg" alt="">
-                  <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
                   <ul class="list-inline">
-                    <li>Date: January 2017</li>
-                    <li>Client: Finish</li>
-                    <li>Category: Identity</li>
+                    <li>Ketinggian: 2.045 mdpl</li>
+                    <li>Client: Explore</li>
+                    <li>Koordinat: 8°06′43LU 112°55′20BT </li>
                   </ul>
+                  <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
                   <button class="btn btn-primary" data-dismiss="modal" type="button">
                     <i class="fa fa-times"></i>
                     Close Project</button>
@@ -659,12 +659,12 @@
                   <h2 class="text-uppercase">GUNUNG PENANGGUNGAN</h2>
                   <p class="item-intro text-muted">Gn. Penanggungan,Trawas, Mojokerto, Jawa Timur</p>
                   <img class="img-fluid d-block mx-auto" src="img/portfolio/04-full.jpg" alt="">
-                  <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
                   <ul class="list-inline">
-                    <li>Date: January 2017</li>
-                    <li>Client: Lines</li>
-                    <li>Category: Branding</li>
+                    <li>Ketinggian: 1.653 mdpl</li>
+                    <li>Client: Explore</li>
+                    <li>Koordinat: 7,615°LS 112,62°BT </li>
                   </ul>
+                  <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
                   <button class="btn btn-primary" data-dismiss="modal" type="button">
                     <i class="fa fa-times"></i>
                     Close Project</button>
@@ -693,12 +693,12 @@
                   <h2 class="text-uppercase">GUNUNG SEMERU</h2>
                   <p class="item-intro text-muted">Gn. Semeru, Pasrujambe, Kabupaten Lumajang, Jawa Timur</p>
                   <img class="img-fluid d-block mx-auto" src="img/portfolio/05-full.jpg" alt="">
-                  <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
                   <ul class="list-inline">
-                    <li>Date: January 2017</li>
-                    <li>Client: Southwest</li>
-                    <li>Category: Website Design</li>
+                    <li>Ketinggian: 3.744 mdpl</li>
+                    <li>Client: Explore</li>
+                    <li>Koordinat: 8°06' LS 112°55' BT. </li>
                   </ul>
+                  <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
                   <button class="btn btn-primary" data-dismiss="modal" type="button">
                     <i class="fa fa-times"></i>
                     Close Project</button>
@@ -724,15 +724,15 @@
               <div class="col-lg-8 mx-auto">
                 <div class="modal-body">
                   <!-- Project Details Go Here -->
-                  <h2 class="text-uppercase">Project Name</h2>
-                  <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
+                  <h2 class="text-uppercase">GUNUNG WILISI</h2>
+                  <p class="item-intro text-muted">Gunung Wilis, Banaran, Pulung, Kabupaten Ponorogo, Jawa Timur<p>
                   <img class="img-fluid d-block mx-auto" src="img/portfolio/06-full.jpg" alt="">
-                  <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
                   <ul class="list-inline">
-                    <li>Date: January 2017</li>
-                    <li>Client: Window</li>
-                    <li>Category: Photography</li>
+                    <li>Ketinggian: 2.169 mdpl</li>
+                    <li>Client: Explore</li>
+                    <li>Koordinat: 7,808°LS 111,758°BT </li>
                   </ul>
+                  <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
                   <button class="btn btn-primary" data-dismiss="modal" type="button">
                     <i class="fa fa-times"></i>
                     Close Project</button>
